# Melbourne-Urban-Heat-Model

./: .gitignore  Melbourne_Heat_Model.ipynb  README.md  melbourne_heat_model.csv  pyproject.toml
scripts/: build_dataset.py  fetch_real_data.py  run_model.py
src/: heat_model.py
tests/: conftest.py  test_data_loading.py  test_data_validation.py  test_geometry.py  test_model.py
